create module from entity for course
